@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+	<string-array name="Modes">
+		<item>@string/DBFields</item>
+		<item>@string/DBSQL</item>
+        <item>@string/DBData</item>
+    </string-array>
+	<string-array name="ModeValues">
+		<item>1</item>
+		<item>2</item>
+        <item>3</item>
+    </string-array>
+</resources>
