@@ -5,7 +5,14 @@ Working on
 		from next version??
 	Change in orientation with open dialogues must be taken care of
 
+ToDo
+	Searching
+	Select where to save export / dump
+	Select file to restore / load
+
 Next version:
+	Go directly to favorite view in table viewer (Fields, SQL or Data)
+	Configurable font size in data lists
 	Easy editing of databases in "Dropbox"
 	Bug fixes: Has solved an annoying null pointer bug - it did appear if
 		users was trying to manipulate something that was not a database  
